# SimpleArchiver

./: .gitignore  CMakeLists.txt  Changelog.md  LICENSE  README.md  file_format.md  file_format_1_example_0  file_format_1_example_1  index.html  invalid_file_format_0_example_1  invalid_file_format_1_example_1  invalid_file_format_1_example_2
.forgejo/workflows/: build_releases.yaml  unittest.yml
.github/workflows/: man_to_html.yml  unittest.yml
cosmopolitan/: .gitignore  Makefile
man/: simplearchiver.1
src/: .lvimrc  archiver.c  archiver.h  helpers.c  helpers.h  main.c  parser.c  parser.h  parser_internal.h  platforms.h  test.c  users.c  users.h  version.h
src/algorithms/: linear_congruential_gen.c  linear_congruential_gen.h
src/data_structures/: chunked_array.c  chunked_array.h  hash_map.c  hash_map.h  linked_list.c  linked_list.h  list_array.c  list_array.h  priority_heap.c  priority_heap.h  string_list.c  string_list.h  test.c
test_files/: invalid_file_format_0_example_0  invalid_file_format_1_example_0
